--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
               До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;
             </h2>
             <p class="cover__subtitle">
-              По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала
-              на&nbsp;электричках.
+              По&nbsp;мотивам&nbsp;учебной&nbsp;темы о&nbsp;Транссибе —&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала
+              на электричках.
             </p>
           </a>
       </section>
